--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                         <h3 class="text-center w-75 mx-auto my-3 fs-4">Why your smartphone is causing you ‘text neck’ syndrome</h3>
                         <p>De la <a href="https://multimedia.scmp.com/lifestyle/article/2183329/text-neck/" class="link-light">infografía</a> de <a href="https://www.scmp.com/author/pablo-robles" class="link-light">Pablo Robles</a>, copiemos sólo la gráfica que presenta los problemas comunes de salud que se relacionan el uso excesivo de los teléfonos móviles. Tal como en casos anteriores, es <em>una gráfica que tiene dos versiones</em>; una versión pensada para dispositivos móviles y otra para monitores con pantallas más anchas que altas.</p>
-                        <object type="image/svg+xml" data="img/grafica-mobile-first.svg" class="w-100 d-md-none">Reseña o imagen alternativa</object>
-                        <object type="image/svg+xml" data="img/grafica-desktop-later.svg" class="w-100 d-none d-md-block">Reseña o imagen alternativa</object>
+                        <object type="image/svg+xml" data="img/problems-m.svg" class="w-100 d-md-none">Reseña o imagen alternativa</object>
+                        <object type="image/svg+xml" data="img/problems.svg" class="w-100 d-none d-md-block">Reseña o imagen alternativa</object>
                     </div>
                 </div>
             </section>
