--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <aside class="container">
                 <div class="row">
                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                        <p>Escriba aquí una conclusión para lo presentado. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mattis diam et tortor vestibulum ultricies. Vestibulum purus leo, blandit vel interdum nec, vehicula nec ex. Duis id egestas ipsum. Donec laoreet posuere est sed molestie. Vivamus nec enim blandit, porttitor dolor at, varius magna.</p>
+                        <p>Es complejo de entender en un inicio, pero es interesante conocer como sacar ciertos elementos de un código fuente ajeno.</p>
                     </div>
                 </div>
             </aside>
